from models.core.schemes import Model


class User(Model):
    pass
